@@ -21,109 +21,117 @@ end_package
 
 begin_import
 import|import
-name|java
+name|com
 operator|.
-name|awt
+name|jgoodies
 operator|.
-name|BorderLayout
+name|forms
+operator|.
+name|builder
+operator|.
+name|PanelBuilder
 import|;
 end_import
 
 begin_import
 import|import
-name|java
+name|com
 operator|.
-name|awt
+name|jgoodies
 operator|.
-name|Color
+name|forms
+operator|.
+name|layout
+operator|.
+name|CellConstraints
 import|;
 end_import
 
 begin_import
 import|import
-name|java
+name|com
 operator|.
-name|awt
+name|jgoodies
 operator|.
-name|Component
+name|forms
+operator|.
+name|layout
+operator|.
+name|FormLayout
 import|;
 end_import
 
 begin_import
 import|import
-name|java
+name|org
 operator|.
-name|awt
+name|apache
 operator|.
-name|FlowLayout
+name|cayenne
+operator|.
+name|modeler
+operator|.
+name|Application
 import|;
 end_import
 
 begin_import
 import|import
-name|java
+name|org
 operator|.
-name|awt
+name|apache
 operator|.
-name|event
+name|cayenne
 operator|.
-name|ActionEvent
+name|modeler
+operator|.
+name|CayenneModelerFrame
 import|;
 end_import
 
 begin_import
 import|import
-name|java
+name|org
 operator|.
-name|awt
+name|apache
 operator|.
-name|event
+name|cayenne
 operator|.
-name|ActionListener
+name|modeler
+operator|.
+name|action
+operator|.
+name|ValidateAction
 import|;
 end_import
 
 begin_import
 import|import
-name|java
+name|org
 operator|.
-name|awt
+name|apache
 operator|.
-name|event
+name|cayenne
 operator|.
-name|MouseAdapter
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|awt
-operator|.
-name|event
-operator|.
-name|MouseEvent
-import|;
-end_import
-
-begin_import
-import|import
-name|java
+name|modeler
 operator|.
 name|util
 operator|.
-name|Collections
+name|CayenneDialog
 import|;
 end_import
 
 begin_import
 import|import
-name|java
+name|org
 operator|.
-name|util
+name|apache
 operator|.
-name|List
+name|cayenne
+operator|.
+name|validation
+operator|.
+name|ValidationFailure
 import|;
 end_import
 
@@ -237,117 +245,109 @@ end_import
 
 begin_import
 import|import
-name|org
+name|java
 operator|.
-name|apache
+name|awt
 operator|.
-name|cayenne
-operator|.
-name|modeler
-operator|.
-name|Application
+name|BorderLayout
 import|;
 end_import
 
 begin_import
 import|import
-name|org
+name|java
 operator|.
-name|apache
+name|awt
 operator|.
-name|cayenne
-operator|.
-name|modeler
-operator|.
-name|CayenneModelerFrame
+name|Color
 import|;
 end_import
 
 begin_import
 import|import
-name|org
+name|java
 operator|.
-name|apache
+name|awt
 operator|.
-name|cayenne
-operator|.
-name|modeler
-operator|.
-name|action
-operator|.
-name|ValidateAction
+name|Component
 import|;
 end_import
 
 begin_import
 import|import
-name|org
+name|java
 operator|.
-name|apache
+name|awt
 operator|.
-name|cayenne
+name|FlowLayout
+import|;
+end_import
+
+begin_import
+import|import
+name|java
 operator|.
-name|modeler
+name|awt
+operator|.
+name|event
+operator|.
+name|ActionEvent
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|awt
+operator|.
+name|event
+operator|.
+name|ActionListener
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|awt
+operator|.
+name|event
+operator|.
+name|MouseAdapter
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|awt
+operator|.
+name|event
+operator|.
+name|MouseEvent
+import|;
+end_import
+
+begin_import
+import|import
+name|java
 operator|.
 name|util
 operator|.
-name|CayenneDialog
+name|Collections
 import|;
 end_import
 
 begin_import
 import|import
-name|org
+name|java
 operator|.
-name|apache
+name|util
 operator|.
-name|cayenne
-operator|.
-name|validation
-operator|.
-name|ValidationFailure
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|jgoodies
-operator|.
-name|forms
-operator|.
-name|builder
-operator|.
-name|PanelBuilder
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|jgoodies
-operator|.
-name|forms
-operator|.
-name|layout
-operator|.
-name|CellConstraints
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|jgoodies
-operator|.
-name|forms
-operator|.
-name|layout
-operator|.
-name|FormLayout
+name|List
 import|;
 end_import
 
@@ -1132,6 +1132,14 @@ name|info
 operator|.
 name|getDescription
 argument_list|()
+expr_stmt|;
+name|setToolTipText
+argument_list|(
+name|info
+operator|.
+name|getDescription
+argument_list|()
+argument_list|)
 expr_stmt|;
 block|}
 name|setBackground
